--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Webdavsharp.github.io</title>
+    <title>WebDAVSharp</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/WebDAVSharp">View on GitHub</a>
 
-          <h1 id="project_title">Webdavsharp.github.io</h1>
+          <h1 id="project_title">WebDAVSharp</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
