--- a/index.html
+++ b/index.html
@@ -4,29 +4,49 @@ title: Home
 home: true
 ---
 
-<section class="intro2">
+<section class="big-banner">
     <div class="grid">
         <div class="unit whole center-on-mobiles drawing">
-            <!--<img src="img/lab.png" class="featured-img"/>-->
+            <div class="text">
+                <p>Looking for a WebDAV server?</p>
 
-            <p>Welcome to the WebDAV# website !</p>
-
-            <!--<div id="intro-text">-->
-                <!--<p>This site is currently under development.</p>-->
-                <!--<h2>your great app deserves an interface to match</h2>-->
-
-                <!--<h3>custom ui/ux for innovators</h3>-->
-
-                <!--&lt;!&ndash;<div class="buttons">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<a href="#contact" class="greenbtn btn" rel="slideto">Get in Touch</a>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<a href="#work" class="aquabtn btn" rel="slideto">View our work</a>&ndash;&gt;-->
-
-                    <!--&lt;!&ndash;<div class="clearfix"></div>&ndash;&gt;-->
-                <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--</div>-->
+                <ul>
+                    <li class="button-white"><a href="#">Download server</a></li>
+                    <li class="button-white"><a href="/setup/setup-server/">Setup server</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="clearfix"></div>
+</section>
+
+<section>
+    <div class="grid">
+        <div class="unit whole center-on-mobiles">
+            <div class="home-box">
+                <article>
+                    <h3>What?</h3>
+                    <p>A WebDAV server, coded in C#, which can be used for various WebDAV .NET applications</p>
+                </article>
+            </div>
+
+            <div class="home-box">
+                <article>
+                    <h3>How?</h3>
+                    <p>We've provided various guides how to setup the configuration of the server and client</p>
+                </article>
+            </div>
+
+            <div class="home-box">
+                <article>
+                    <h3>Where?</h3>
+                    <p>You can find the code on GitHub</p>
+                </article>
+            </div>
+
+            <div class="clearfix"></div>
+        </div>
+    </div>
 </section>
 
 <section class="intro">
