Green buttons added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@ home: true
                 <p>Looking for a WebDAV server?</p>
 
                 <ul>
-                    <div class="hide-on-mobiles">
-                        <li class="button-white "><a href="#">Download server</a></li>
-                    </div>
                     <li class="button-white"><a href="/setup/setup-server/">Setup server</a></li>
+                    <li class="button-white hide-on-mobiles"><a href="#">Download server</a></li>
                 </ul>
             </div>
         </div>
@@ -36,6 +34,7 @@ home: true
                 <article>
                     <h3>How?</h3>
                     <p>We've provided various guides how to setup the configuration of the server and client</p>
+                    <p class="button-green"><a href="/setup/">Go to guides</a></p>
                 </article>
             </div>
 
@@ -43,6 +42,7 @@ home: true
                 <article>
                     <h3>Where?</h3>
                     <p>You can find the code on GitHub</p>
+                    <p class="button-green"><a href="#">Go to the code</a></p>
                 </article>
             </div>
 
