Boxes on front page are now equal in size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ home: true
 
 <section>
     <div class="grid">
-        <div class="unit whole center-on-mobiles">
+        <div class="unit whole center-on-mobiles wrapper-home-boxes">
             <div class="home-box">
                 <article>
                     <h3>What?</h3>
