Download urls added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ home: true
 
                 <ul>
                     <li class="button-white"><a href="/setup/setup-server/">Setup server</a></li>
-                    <li class="button-white hide-on-mobiles"><a href="#">Download server</a></li>
+                    <li class="button-white hide-on-mobiles"><a href="https://github.com/WebDAVSharp/Server">Download server</a></li>
                 </ul>
             </div>
         </div>
@@ -42,7 +42,7 @@ home: true
                 <article>
                     <h3>Where?</h3>
                     <p>You can find the code on GitHub</p>
-                    <p class="button-green"><a href="#">Go to the code</a></p>
+                    <p class="button-green"><a href="https://github.com/WebDAVSharp/Server">Go to the code</a></p>
                 </article>
             </div>
 
