Links to NuGet package added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ home: true
 
                 <ul>
                     <li class="button-white"><a href="/setup/setup-server/">Setup server</a></li>
-                    <li class="button-white hide-on-mobiles"><a href="https://github.com/WebDAVSharp/WebDAVSharp.Server">Download server</a></li>
+                    <li class="button-white hide-on-mobiles"><a href="https://www.nuget.org/packages/WebDAVSharp.Server/">Download server</a></li>
                 </ul>
             </div>
         </div>
